--- a/style.css
+++ b/style.css
@@ -1,24 +1,48 @@
+#root {
+  padding: 10px 80px;
+}
+
 main {
   display: flex;
+  justify-content: space-around;
+  gap: 20px;
+}
+main section:last-child {
+  display: flex;
+  flex-direction: column;
+  max-width: 500px;
+}
+
+.catalog {
+  margin-top: 4rem;
+  box-shadow: 2px 2px 10px 7px grey;
+  padding: 20px;
+  max-width: 500px;
+}
+.catalog > * {
+  margin: 15px 0px;
 }
 
 .book-wrapper {
   display: flex;
+  width: 95%;
+  gap: 15px;
+}
+.book-wrapper .book-content {
+  display: flex;
+  flex-direction: column;
+}
+.book-wrapper .book-content p.price {
+  flex-grow: 1;
 }
 
-.book-content span {
+.top-icons {
   position: relative;
-  cursor: pointer;
+  bottom: 12px;
+  align-self: flex-end;
 }
-.book-content span div {
-  position: absolute;
-  top: 80px;
-  width: 340px;
-  visibility: hidden;
-}
-
 .top-icons .cart {
-  color: lightcoral;
+  cursor: pointer;
   font-size: 4rem;
 }
 .top-icons .animation {
@@ -30,20 +54,70 @@ main {
 }
 
 #bag {
-  visibility: hidden;
-  min-height: 50px;
-  min-width: 300px;
-  border: thin solid black;
+  transform: scaleY(0);
+  transition: transform 0.6s;
+  transform-origin: top;
+  box-shadow: 2px 2px 10px 7px grey;
+  padding: 20px;
+}
+#bag > * {
+  margin: 15px 0px;
 }
 #bag .closeX {
-  color: red;
-  font-size: 1.5rem;
+  position: absolute;
+  right: 30px;
   width: 1.5rem;
   height: 1.5rem;
   cursor: pointer;
+  font-size: 1.5rem;
+  color: red;
 }
 #bag .pieces::after {
   content: attr(data-pieces);
+}
+#bag .control {
+  display: none;
+}
+#bag .empty {
+  text-align: center;
+}
+
+.control > * {
+  margin-inline: 10px;
+}
+.control .more {
+  position: relative;
+  cursor: pointer;
+  font-style: italic;
+  color: #0fa1d1;
+}
+.control .more div {
+  position: absolute;
+  z-index: 1;
+  bottom: 20px;
+  left: -100px;
+  width: 340px;
+  padding: 10px;
+  background: aliceblue;
+  cursor: initial;
+  visibility: hidden;
+  box-shadow: 2px 2px 10px 7px grey;
+}
+.control .more div button {
+  display: block;
+  cursor: pointer;
+}
+.control .button {
+  cursor: pointer;
+  border-radius: 10px;
+  background: #5fc7e9;
+  color: white;
+}
+
+.image {
+  width: 170px;
+  height: 250px;
+  border: 1px solid lightgray;
 }
 
 @-webkit-keyframes blum {
