--- a/style.scss
+++ b/style.scss
@@ -1,28 +1,44 @@
-main{
-  display: flex;
-  // grid-template-columns: 50% 50%;
+@import './assets/styles.scss';
+
+#root{
+  padding: 10px 80px;
 }
 
-.book-wrapper{
+main{
   display: flex;
-}
-.book-content{
-  // display: flex;
-  span{
-    position: relative;
-    cursor: pointer;
-    div{
-      position: absolute;
-      top: 80px;
-      width: 340px;
-      visibility: hidden;
-    }
+  justify-content: space-around;
+  gap: 20px;
+  section:last-child{
+    display: flex;
+    flex-direction: column;
+    @include section;
   }
 }
+.catalog{
+  margin-top: $Icon-size;
+  @include shadow;
+  @include container;
+  @include section;
+}
+.book-wrapper{
+    display: flex;
+    width: 95%;
+    gap: 15px;
+    .book-content{
+      display: flex;
+      flex-direction: column;
+      p.price{
+        flex-grow: 1;
+      }
+    }
+  }
 .top-icons{
+  position: relative;
+  bottom: 12px;
+  align-self: flex-end;
   .cart{
-    color: lightcoral;
-    font-size: 4rem;
+    cursor: pointer;
+    font-size: $Icon-size;
   }
   .animation{
     animation: blum .5s cubic-bezier(0.4, 0, 0.2, 1);
@@ -32,23 +48,67 @@ main{
   }
 }
 #bag{
-  visibility: hidden;
-  min-height: 50px;
-  min-width: 300px;
-  border: thin solid black;
+  transform: scaleY(0);
+  transition: transform .6s;
+  transform-origin: top;
+  @include shadow;
+  @include container;
   .closeX{
-    color: red;
-    font-size: 1.5rem;
+    position: absolute;
+    right: 30px;
     width: 1.5rem;
     height: 1.5rem;
     cursor: pointer;
-
+    font-size: 1.5rem;
+    color: red;
   }
   .pieces::after{
     content: attr(data-pieces);
   }
+  .control{
+    display: none;
+  }
+  .empty{
+    text-align: center;
+  }
 }
 
+.control{
+  &>*{
+    margin-inline: 10px;
+  }
+  .more{
+    position: relative;
+    cursor: pointer;
+    font-style: italic;
+    color: #0fa1d1;
+    div{
+      position: absolute;
+      z-index: 1;
+      bottom: 20px;
+      left: -100px;
+      width: 340px;
+      padding: 10px;
+      background: aliceblue;
+      cursor: initial;
+      visibility: hidden;
+      @include shadow;
+      button{
+        display: block;
+        cursor: pointer;
+      }
+    }
+  }
+  .button{
+    cursor: pointer;
+    @include button;
+  }
+}
+.image{
+  width: 170px;
+  height: 250px;
+  border: 1px solid lightgray;
+}
 @keyframes blum{
   50%{
     transform: scale(1.2);
