feat(main): add header

--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
 #root {
-  padding: 10px 80px;
+  padding: 10px 50px;
+}
+
+header {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 25px;
+  gap: 20px;
+}
+header h1 {
+  align-self: center;
+  transform: scaleY(1.8) skew(10deg, 10deg) rotate3d(1, 1, 1, 0deg);
+  -webkit-animation: rotate 2s linear 0.2s forwards;
+          animation: rotate 2s linear 0.2s forwards;
+  color: #5fc7e9;
+}
+header #head-image {
+  display: flex;
+  align-items: flex-end;
+  width: 45vw;
+  height: 70vh;
+  padding-left: 10px;
+  background-image: url("./assets/images/freddie-marriage-w8JiSVyjy-8-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: lightcyan;
+}
+header #head-image a {
+  color: lightcyan;
 }
 
 main {
@@ -115,9 +144,9 @@ main section:last-child {
 }
 
 .image {
+  border: 1px solid lightgray;
   width: 170px;
   height: 250px;
-  border: 1px solid lightgray;
 }
 
 @-webkit-keyframes blum {
@@ -139,5 +168,15 @@ main section:last-child {
   to {
     transform: none;
     color: lightcoral;
+  }
+}
+@-webkit-keyframes rotate {
+  to {
+    transform: scaleY(1.8) skew(-30deg, 10deg) rotate3d(1, 1, 1, -400deg);
+  }
+}
+@keyframes rotate {
+  to {
+    transform: scaleY(1.8) skew(-30deg, 10deg) rotate3d(1, 1, 1, -400deg);
   }
 }/*# sourceMappingURL=style.css.map */
