feat: show total amount on form-page

--- a/style.scss
+++ b/style.scss
@@ -117,6 +117,7 @@ main {
       padding: 10px;
       background: aliceblue;
       cursor: initial;
+      font-style: initial;
       visibility: hidden;
       @include shadow;
       button {
