--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ main section:last-child {
   padding: 10px;
   background: aliceblue;
   cursor: initial;
+  font-style: initial;
   visibility: hidden;
   box-shadow: 2px 2px 10px 7px grey;
 }
