--- a/form/formStyle.css
+++ b/form/formStyle.css
@@ -1,15 +1,17 @@
 body {
-  padding: 20px 100px;
+  margin: 8px;
 }
 
 form {
   display: flex;
+  margin-top: 2rem;
   flex-direction: column;
-  width: 40%;
   box-shadow: 2px 2px 10px 2px;
+  width: 40%;
   padding: 15px;
+  font-size: 1.2rem;
+  margin-inline: auto;
   gap: 5px;
-  font-size: 1.5rem;
 }
 form input {
   height: 2rem;
@@ -18,11 +20,15 @@ form input {
 form input.error {
   border: 3px solid red;
 }
+form [type=radio],
+form [type=checkbox] {
+  margin-right: 10px;
+}
 form span.error:not(p, a) {
-  visibility: hidden;
+  font-size: 1.2rem;
   font-style: italic;
   color: red;
-  font-size: 1.2rem;
+  visibility: hidden;
 }
 form button {
   align-self: center;
