--- a/form/formStyle.scss
+++ b/form/formStyle.scss
@@ -1,27 +1,32 @@
 body {
-  padding: 20px 100px;
+  margin: 8px;
 }
 form {
   display: flex;
+  margin-top: 2rem;
   flex-direction: column;
-  width: 40%;
   box-shadow: 2px 2px 10px 2px;
+  width: 40%;
   padding: 15px;
+  font-size: 1.2rem;
+  margin-inline: auto;
   gap: 5px;
-  font-size: 1.5rem;
   input {
     height: 2rem;
     font-size: 1.2rem;
     &.error {
-      // border-color: red;
       border: 3px solid red;
     }
   }
+  [type="radio"],
+  [type="checkbox"] {
+    margin-right: 10px;
+  }
   span.error:not(p, a) {
-    visibility: hidden;
+    font-size: 1.2rem;
     font-style: italic;
     color: red;
-    font-size: 1.2rem;
+    visibility: hidden;
   }
   button {
     align-self: center;
