--- a/form/formStyle.css
+++ b/form/formStyle.css
@@ -4,14 +4,18 @@ body {
 
 form {
   display: flex;
-  margin-top: 2rem;
   flex-direction: column;
+  margin-top: 2rem;
   box-shadow: 2px 2px 10px 2px;
+  border-radius: 5px;
   width: 40%;
   padding: 15px;
   font-size: 1.2rem;
   margin-inline: auto;
   gap: 5px;
+}
+form *:first-child {
+  align-self: center;
 }
 form input {
   height: 2rem;
@@ -41,4 +45,33 @@ form fieldset label {
   display: inline-flex;
   align-items: center;
   margin-inline: 15px;
+}
+
+#info {
+  position: fixed;
+  top: calc(50% - 100px);
+  left: calc(50% - 150px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transform: scale(0);
+  transition: transform 1s;
+  box-shadow: 2px 2px 5px 2px grey;
+  width: 300px;
+  height: 200px;
+  padding: 10px;
+  background: aliceblue;
+  font-size: 1.5rem;
+  white-space: pre-line;
+}
+#info *:first-child {
+  text-align: center;
+}
+#info *:last-child {
+  display: inline-flex;
+  justify-content: space-around;
+}
+
+button {
+  cursor: pointer;
 }/*# sourceMappingURL=formStyle.css.map */
