--- a/form/formStyle.scss
+++ b/form/formStyle.scss
@@ -3,14 +3,18 @@ body {
 }
 form {
   display: flex;
-  margin-top: 2rem;
   flex-direction: column;
+  margin-top: 2rem;
   box-shadow: 2px 2px 10px 2px;
+  border-radius: 5px;
   width: 40%;
   padding: 15px;
   font-size: 1.2rem;
   margin-inline: auto;
   gap: 5px;
+  *:first-child {
+    align-self: center;
+  }
   input {
     height: 2rem;
     font-size: 1.2rem;
@@ -40,4 +44,31 @@ form {
       margin-inline: 15px;
     }
   }
+}
+#info {
+  position: fixed;
+  top: calc(50% - 200px / 2);
+  left: calc(50% - 300px / 2);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transform: scale(0);
+  transition: transform 1s;
+  box-shadow: 2px 2px 5px 2px grey;
+  width: 300px;
+  height: 200px;
+  padding: 10px;
+  background: aliceblue;
+  font-size: 1.5rem;
+  white-space: pre-line;
+  *:first-child {
+    text-align: center;
+  }
+  *:last-child {
+    display: inline-flex;
+    justify-content: space-around;
+  }
+}
+button {
+  cursor: pointer;
 }
